Threw in some content

--- a/index.html
+++ b/index.html
@@ -1,1 +1,86 @@
-Hello World
+<!doctype html>
+<html lang="en">
+  <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Human-Centered Green Tech</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+  </head>
+  <body>
+    <div class="container">
+        <div class="row mt-5">
+            <div class="col-md-12">
+                <h1 class="display-1 text-center">Human-Centered Green Tech</h1>
+                <h1 class="display-6 text-center text-muted">Interventions for Encouraging Sustainable Behavior</h1>
+            </div>
+        </div>
+        <div class="row mt-2">
+            <hr>
+            <div class="col-md-12">
+                <p class="lead">
+                    Global CO2 emissions are on the rise with the compounding effects of human activities related to transportation, agriculture, or energy production and usage~\cite{epa_report_2022}. While there is a need for large corporations and policymakers to play their part in curbing GHG (Greenhouse Gas) emissions~\cite{mann2021new, chater2022frame}, individual consumers can also play a big role in reducing their carbon footprints by making eco-friendly choices in their daily lives~\cite{walz2014gamifying,froehlich2010design}. Previous work has shown the potential of persuasive eco-feedback technologies (i.e., technologies that provide feedback on individual or group behaviors with a goal of reducing environmental impact) in aiding users to make sustainable choices across a wide range of domains, including food consumption~\cite{zapico2016eco,shakeri2021envirofy}, household energy usage~\cite{yun2013sustainability,holmes2007eco}, transit~\cite{froehlich2009ubigreen,park2017ecotrips}, and waste disposal~\cite{holstius2004infotropism}. However, there still remains a wide gap in the widespread adoption of these technologies. As smart devices increasingly become part of our everyday lives, they present interesting opportunities for researchers to identify potential areas of human-AI interaction that can be leveraged for encouraging green behavior amongst users.                   
+                </p>
+                <p class="lead">
+                    With the advent of IoT (Internet-of-Things) devices, there is a huge potential for leveraging sensory data to study user behavior, derive insights using ML algorithms, and introduce interventions backed by behavioral science for encouraging sustainable behavior~\cite{sadeghian2022designing}. Large-scale analysis of interaction data can not only help us understand desirable green behavioral patterns amongst users~\cite{mohanty2022pick}, but also identify potential areas for nudging users to make a change. Behavioral science theories and HCI concepts can help inform the design of different interventions for encouraging users to make eco-friendly choices~\cite{sanguinetti2018information}. AI models can help support these eco-feedback efforts in a significant manner, be it through dynamic interventions, personalized notification delivery~\cite{yancey2020sleeping}, counterfactual environmental impact of eco-friendly user actions~\cite{shamma2022ev}, etc. Through this workshop, we will explore these different human-AI interaction design avenues to not only promote eco-friendly decision making, but also foster carbon literacy through a “learning by doing” approach. 
+                </p>
+            </div>
+        </div>
+        <div class="row mt-4">
+            <div class="col-md-12">
+                <h2 class="display-5 text-center">Call for Participation</h2>
+                <p class="lead mt-3">
+                    As smart technologies continue to proliferate in different spheres of our daily lives~\cite{ahuja_mckinsey_2016}, they also present interesting opportunities and challenges for fostering green user behavior.  
+                    The goal of this workshop is to understand user behavior around technology, derive insights, and design \textbf{human-centered green technology interventions for encouraging sustainable user behavior}. While industry leaders and policymakers strive towards making efforts to reduce ever-increasing global greenhouse gas emissions~\cite{epa_report_2022,mann2021new, chater2022frame}, we aim to look beyond the "\emph{let's make greener buildings and cars}" notion in this workshop. Instead, we focus on the individuals who can play a big role in reducing their carbon footprints by making eco-friendly choices in their daily lives~\cite{sanguinetti2018information,walz2014gamifying,froehlich2010design}.  
+                </p>
+                <p class="lead">
+                    What technologies can we design to support greener interactions? 
+                    What kind of datasets can researchers generate and study for understanding user attitudes and eco-friendly behavior? 
+                    How do people interpret CO$_2$ emissions? 
+                    What motivates people to be more eco-aware?
+                    What are some of the challenges one might encounter in the design and adoption of green technologies? 
+                </p>
+                <p class="lead">
+                    We invite submissions of all forms, but not limited to: 
+                    \begin{itemize}
+                        \item Position statements and papers (2-4 pages). 
+                        \item Slide (Powerpoint/Keynote/etc.) Decks 
+                        \item Video demos
+                        \item Hack ideas 
+                    \end{itemize}
+
+                    Important Dates:
+                    \begin{description}
+                        \item[Submission] Feb 2, 2023
+                        \item[Notification] Feb 14, 2023
+                        \item[Workshop] April 23 or April 24, 2023
+                    \end{description}
+                </p>
+                <p class="lead">
+                    This one-day workshop aims to call on CHI researchers working in a wide range of domains including: behavioral science, human-centered design, human-AI interaction, climate change, sustainable HCI, and others to propose novel design interventions to encourage eco-friendly user behavior.  The application domains include but are not limited to transportation, food consumption, home energy usage, and smart workplaces.  Submissions will be collected via EasyChair.  Please direct questions to humancenteredgreentech@gmail.com.
+                </p>
+            </div>
+        </div>
+
+        <div class="row mt-4">
+            <div class="col-md-12">
+                <h2 class="display-5 text-center">Important Dates</h2>
+            </div>
+        </div>
+
+        <div class="row mt-4">
+            <div class="col-md-12">
+                <h2 class="display-5 text-center">Organizers</h2>
+            </div>
+        </div>
+
+        <div class="row mt-4">
+            <div class="col-md-12">
+                <h2 class="display-5 text-center">References</h2>
+            </div>
+        </div>
+
+    </div>
+    
+  </body>
+</html>
